Fix for nav tabs offsetting and overlapping the delineation

--- a/src/app/header/nav/nav.component.css
+++ b/src/app/header/nav/nav.component.css
@@ -18,11 +18,6 @@ a {
 .navLink {
     color: var(--black);
 }
-@media screen and (max-width: 1200px){
-    .navLink {
-        margin-bottom: -4px;
-    }
-}
 .navLink:hover {
     background: var(--black);
     color: var(--white);
